# jims-rust-to-npm-test

./: README.md
jims-rust-cli-test/: .gitignore  Cargo.toml  README-for-registry.md  README.md  package-lock.json  package.json
jims-rust-cli-test/src/: main.rs
