[package]
name = "jims-rust-cli-test"
version = "0.1.2"
edition = "2021"
description = "A cool cli tool test by Jim!"
repository = "https://github.com/JimLynchCodes/jims-rust-to-npm-test"
readme = "README-for-registry.md"
keywords = ["rust-to-npm-cli", "deploy-rust", "npm", "rust", "cli-tool"]
categories = ["command-line-utilities"]
license = "MIT"
homepage = "https://github.com/JimLynchCodes/jims-rust-to-npm-test"
authors = ["Jim Lynch - jim.lynch@evaluates2.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
